--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div id="London" class="tabcontent">
       <h3>London</h3>
-      <p>London is the capital city of England....</p>
+      <p>London is the capital city of England.</p>
     </div>
 
     <div id="Paris" class="tabcontent">
